2008-06-05  Ivan frade  <ivan.frade@nokia.com>

	* src/libtracker-db/tracker-db-action.[ch]
	* src/trackerd/tracker-watcher-inotify.c:
	(is_delete_event) moved to tracker-db-action

2008-06-05  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-db/tracker-db-file-info.[ch]
	* src/trackerd/tracker-db.c
	* src/trackerd/tracker-process-files.[ch]
	* src/trackerd/tracker-watcher-inotify.c:
	(tracker_process_files_is_file_info_valid) moved to
	tracker-db-file-info (tracker_db_file_info_is_valid).
	
	
2008-06-05  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/files.c (check_exclude_file): Exclude
	also *.bak files.
	(tracker_module_get_file_metadata): Insert missing things in the
	metadata table, they're strings at the moment, although there should
	be some way to deal with them as integer/times/boolean, etc...
	* src/tracker-indexer/tracker-indexer-db.c
	(tracker_db_create_service): Insert some missing data in the Services
	table.

2008-06-05  Ivan Frade <ivan.frade@nokia.com>
	
	* src/trackerd/tracker-email-plugin.h: Email plugin interface.
	
	* src/trackerd/tracker-email.c: Consistent function names. _init
	is now _start_watching_emails and _shutdown is now 
	_end_watching_emails.	

	* src/trackerd/tracker-email-[modest,kmail,evolution,thunderbird].c:
	Renamed method names to "implement" the plugin interface.

	* src/trackerd/tracker-main.c: Use the new 
	(_start,_end)_watching_emails functions.

2008-06-04  Carlos Garnacho  <carlos@imendio.com>

	* filters/application/*:
	* filters/text/*: Dump text in stdout instead of a temp file.

2008-06-04  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer-module.[ch]
	(tracker_indexer_module_get_text): New
	function, returns the contained/extracted text for a file.
	* src/tracker-indexer/modules/files.c (tracker_module_get_file_text)
	(tracker_metadata_call_text_filter): Added, either get the text for
	text/development files, or call the external filter, which returns the